[package]
name = "client_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
druid-derive = "0.5.1"
regex = "1.10.3"
lazy_static = "1.4.0"
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
webpki = "0.22.4"
webpki-roots = "0.26.1"
tokio = "1.36.0"
tokio-rustls = "0.25.0"