[package]
name = "client_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
druid-derive = "0.5.1"
regex = "1.10.3"
lazy_static = "1.4.0"

tokio = { version = "1", features = ["full"] }
rustls = "0.20"
tokio-rustls = "0.23.1"
webpki = "0.22"
webpki-roots = "0.22"
rustls-pemfile = "0.2"