[package]
name = "client_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
druid-derive = "0.5.1"
regex = "1.10.3"
lazy_static = "1.4.0"

tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3.0"
native-tls = "0.2.7"
im = "15.0.0"
